fastboot: Build arm64 AMI image
- Supports arm64 ext4fs AMI creation using EBS-Surrogate
- Reduce VM boot-time between 10 to 15 seconds
- Reduce VM boot time less than 10 seconds with optional "fast-commit"
- Shrink rootfs size from 16GB to 10GB
- Cleanup unused files and packages

Signed-off-by: Lakshmipathi Ganapathi <lakshmipathi.g@gmail.com>

--- a/ansible/tasks/setup-pgbouncer.yml
+++ b/ansible/tasks/setup-pgbouncer.yml
@@ -100,6 +100,7 @@
   become_user: postgres
   shell:
     cmd: /usr/lib/postgresql/bin/psql -f /tmp/00-schema.sql
+  when: not ebssurrogate_mode
 
 # Add fail2ban filter
 - name: import jail.d/pgbouncer.conf
