--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -25,25 +25,7 @@
       systemd:
         name: postgresql
         state: started
-
-    - name: Transfer init SQL files
-      copy:
-        src: files/{{ item.source }}
-        dest: /tmp/{{ item.dest }}
-      loop: "{{ sql_files }}"
-
-    - name: Execute init SQL files
-      become: yes
-      become_user: postgres
-      shell:
-        cmd: /usr/lib/postgresql/bin/psql -f /tmp/{{ item.dest }}
-      loop: "{{ sql_files }}"
-
-    - name: Delete SQL scripts
-      file:
-        path: /tmp/{{ item.dest }}
-        state: absent
-      loop: "{{ sql_files }}"
+      when: not ebssurrogate_mode
 
     - name: Install WAL-G
       import_tasks: tasks/setup-wal-g.yml
@@ -63,13 +45,30 @@
       tags:
         - install-supabase-internal
 
-    - name: Clean out build dependencies
-      import_tasks: tasks/clean-build-dependencies.yml
-
     - name: Adjust APT update intervals
       copy:
         src: files/apt_periodic
         dest: /etc/apt/apt.conf.d/10periodic
+
+    - name: Transfer init SQL files
+      copy:
+        src: files/{{ item.source }}
+        dest: /tmp/{{ item.dest }}
+      loop: "{{ sql_files }}"
+
+    - name: Execute init SQL files
+      become: yes
+      become_user: postgres
+      shell:
+        cmd: /usr/lib/postgresql/bin/psql -f /tmp/{{ item.dest }}
+      loop: "{{ sql_files }}"
+      when: not ebssurrogate_mode
+
+    - name: Delete SQL scripts
+      file:
+        path: /tmp/{{ item.dest }}
+        state: absent
+      loop: "{{ sql_files }}"
 
     - name: UFW - Allow SSH connections
       ufw:
@@ -144,6 +143,9 @@
       find:
         paths: /usr/lib/postgresql/bin
       register: postgresql_bin
+
+    - name: Clean out build dependencies
+      import_tasks: tasks/clean-build-dependencies.yml
 
     - name: Create symbolic links for Postgres binaries to /usr/bin/
       become: yes
